RD-2008-05-05-0: CVS:       Created V62beta_TAG
-----------------------------------------------

AP-2008-05-05-0: Enhancem.:   Adding License agreement to installation scripts

JO-2008-04-30-0: Bugfix:      AdvancedReservationManager needs to include another field as primary key field
                 Bugster:     6691982
                 Review:      JG

AP-2008-04-28-0: Bugfix:      TABLESPACE values should be written to dbwriter.conf
                 Bugster:     6684968
                 Issue:       2566
                 Review:      JO

PJ-2008-04-25-0: Bugfix:      Exception when switching cluster in ARCo GUI
                 Bugster:     6692055
                 Bugfix:      Simple Query builder does not repopulate dropdown menus when cluster changed    
                 Bugster:     6693980
                 Bugfix:      ARCo should not print exception stack trace in the console
                 Bugster:     6694003
                 Issue:       2565
                 Review:      JO

RD-2008-04-21-0: CVS:       Created V62beta_RC2_TAG
---------------------------------------------------

JO-2008-04-17-0: Enhancem.:   o Removed PostgreSQL jdbc driver from distribution
                              o Fixed reporting online-hlep mistakes
                 Review:      AP


PJ-2008-04-07-0: Bugfix:      Problem with case sensitivity for queries in ARCo
                 Bugster:     6684918
                 Bugfix:      Switching from Simple Query to Advanced Query removes the Latebingings
                 Bugster:     6680905
                 Issue:       2536
                 Review:      JO

RD-2008-03-04-0: CVS:       Created V62beta_RC1_TAG
---------------------------------------------------

JO-2008-03-31-0: Enhancem.:   changed messages according to Janice advice
                 Review:      AP

JO-2008-03-27-0: Enhancem.:   Fixed typos, consistency changes, changed messages according to Janice advice
                 Review:      AP
