@@ -1,3 +1,8 @@
+JO-2008-05-28-0: RFE:         Arco dbwriter should be uninstallable
+                 Bugster:     6661540
+                 Review:      LP
+                 Cleanup:     Removed dbwriter.sh script
+
 RD-2008-05-05-0: CVS:       Created V62beta_TAG
 -----------------------------------------------
 
